Release planning iteration MVP
